--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-dom": "^16.8.5",
     "react-responsive-carousel": "^3.1.47",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-tweet": "^1.7.1",
+    "react-tweet-embed": "^1.2.2",
+    "twitter": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
