--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.3.1",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-lottie": "^1.2.3",
     "react-parallax": "^2.2.0",
     "react-pose": "^4.0.8",
     "react-responsive-carousel": "^3.1.47",
